horizontal scroll-bar fixed

--- a/html/style.css
+++ b/html/style.css
@@ -14,6 +14,8 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  overflow-y: scroll; 
+  overflow-x: hidden;
 }
 
 /* Wrappers*/
